--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-sm">
 
-          <h3 id="#A1">Accomodations</h3>
+          <h3 id="A1">Accomodations</h3>
           <p>Located in beautiful Portland</p>
           <p>Showing our guests a great time!</p>
           <p>All of our auditoriums are equipped with brand new Christie 30 sound systmes</p>
@@ -78,7 +78,7 @@
       </div>
     </div>
 <!-- showtimes -->
-<div class="card-deck">
+<div class="card-deck" id="A2">
  
 <div class="card mb-3">
  
@@ -129,7 +129,7 @@
 <!-- showtimes -->
     <div class="text-center">
       <form>
-        <h1 class="text-primary my-5" id="#A3">Sign up for Movie Club Rewards</h1>
+        <h1 class="text-primary my-5" id="A3">Sign up for Movie Club Rewards</h1>
         <div class="form-group">
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
               placeholder="Enter email">
