--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -78,6 +78,14 @@
       </div>
     </div>
 <!-- showtimes -->
+<!--My Alert That Can Be Dismissed!-->
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Read This!</strong> You Should Watch Movies At our Cinema!
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<!--END ALERT-->
 <div class="card-deck" id="A2">
  
 <div class="card mb-3">
@@ -134,9 +142,13 @@
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
               placeholder="Enter email">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="button" class="btn btn-primary popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your email to receive great reward deals!">
+            Submit
+          </button>
       </form>
     </div>
+
+
     <div class="container my-5">
       <ul class="nav nav-inline">
         <li class="nav-item">
@@ -153,10 +165,64 @@
         </li>
       </ul>
     </div>
-
-
-
   </div>
+<!--Jumbotron Heading-->
+<div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+  <div class="container">
+    <h1 class="display-4 hidden-sm-down" style="color: #fff;font-family:roboto;font-weight:900;text-transform:uppercase;">
+    Movie Deals</h1>
+    <p class="lead">Check out our monthly deals...</p>
+    <!--movie deals-->
+    <button type="button" data-toggle="modal" data-target="#register" class="btn btn-outline-primary">See our monthly movie deals</button>
+     <!--/movie deals-->
+  </div>
+</div>
+
+<!-- Form Modal -->
+<div class="modal fade" id="register" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Register To Learn Movie Deals</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group row">
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">First Name</label>
+            <div class="col-sm-10">
+              <input type="first_name" class="form-control form-control-sm" id="colFormLabelSm" placeholder="First Name">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Last Name</label>
+            <div class="col-sm-10">
+              <input type="Last_Name" class="form-control form-control-sm" id="colFormLabelSm" placeholder="Last Name">
+            </div>
+          </div>
+        </form>
+        
+
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END MODAL -->
+
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -167,6 +233,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+    <script>
+      $('.popover-dismiss').popover({
+  trigger: 'focus'
+})
+
+$('.alert').alert()
+    </script>
 </body>
 
 </html>
